rectified lname in html

--- a/signup.html
+++ b/signup.html
@@ -96,7 +96,7 @@
       <input type="text" name="fname" class="form-control top" placeholder="First name" required autofocus>
     </div>
     <div class="form-floating">
-      <input type="text" name="lanme" class="form-control middle" placeholder="Last name" required>
+      <input type="text" name="lname" class="form-control middle" placeholder="Last name" required>
     </div>
     <div class="form-floating">
       <input type="email" name="email" class="form-control bottom" placeholder="Email" required>
